--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="body.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <script src="https://kit.fontawesome.com/792b36fec5.js" crossorigin="anonymous"></script>
     <meta
       name="description"
       content="Web site created using create-react-app"
